infra/deployment-grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-data
              mountPath: /var/lib/grafana
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-dashboards-config
              mountPath: /etc/grafana/provisioning/dashboards
            - name: grafana-dashboard-memory-leak
              mountPath: /var/lib/grafana/dashboards/memory-leak.json
              subPath: memory-leak.json
            - name: grafana-dashboard-nestjs
              mountPath: /var/lib/grafana/dashboards/nestjs-memory-profiling.json
              subPath: nestjs-memory-profiling.json
          resources:
            limits:
              memory: '512Mi'
              cpu: '500m'
            requests:
              memory: '256Mi'
              cpu: '200m'
      volumes:
        - name: grafana-data
          emptyDir: {}
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
        - name: grafana-dashboards-config
          configMap:
            name: grafana-dashboards-config
        - name: grafana-dashboards
          emptyDir: {}
        - name: grafana-dashboard-memory-leak
          configMap:
            name: grafana-dashboard-memory-leak
        - name: grafana-dashboard-nestjs
          configMap:
            name: grafana-dashboard-nestjs

---
# service-grafana.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
