infra/deployment-haproxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      containers:
        - name: haproxy
          image: haproxy:2.9-alpine
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 8080 # Stats
          volumeMounts:
            - name: haproxy-config
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
            - name: ssl-certs
              mountPath: /etc/ssl/certs/
        - name: haproxy-exporter
          image: prom/haproxy-exporter:latest
          ports:
            - containerPort: 9101
          args:
            - --haproxy.scrape-uri=http://localhost:8080/stats?stats;csv
            - --web.listen-address=:9101
          resources:
            requests:
              memory: '64Mi'
              cpu: '50m'
          # Use init container to prepare SSL certificates
      volumes:
        - name: haproxy-config
          configMap:
            name: haproxy-config
        - name: ssl-certs-tmp
          secret:
            secretName: monitoring-tls
        - name: ssl-certs
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy
  namespace: monitoring
spec:
  type: LoadBalancer
  selector:
    app: haproxy
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
    - name: stats
      port: 8080
      targetPort: 8080
      nodePort: 30808
    - name: metrics
      port: 9101
      targetPort: 9101
      nodePort: 30901
