infra/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    # HTTP2
    nginx.ingress.kubernetes.io/http2-push-preload: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    # nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'

    nginx.ingress.kubernetes.io/proxy-read-timeout: '86400'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '86400'
    nginx.ingress.kubernetes.io/proxy-buffering: 'off'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - monitoring.local
      secretName: monitoring-tls
  rules:
    - host: monitoring.local
      http:
        paths:
          # Grafana service - no rewrite, pass full path
          - pathType: Prefix
            path: /grafana
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          # Prometheus service - no rewrite, pass full path
          - pathType: Prefix
            path: /prometheus
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
          # Default service for root path
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nestjs-app
                port:
                  number: 3000
